--- a/category.html
+++ b/category.html
@@ -477,14 +477,41 @@
 								</div>
 							</div>
 							<div class="catalog-filtered catalog__filtered">
-								<ul class="catalog-filtered__list">
-									<li class="catalog-filtered__item">
-										<div class="catalog-filtered__tag">
-											<span>asdada</span>
-											<button class="catalog-filtered__close"></button>
+								<div class="catalog-filtered__wrapper">
+									<div class="catalog-filtered__scroll">
+										<div class="catalog-filtered__list">
+											<div class="catalog-filtered__tag">
+												<span>от <span class="number">73</span> р.</span>
+												<button class="catalog-filtered__delete">
+													<svg>
+														<use xlink:href="img/sprite.svg#icon-close"></use>
+													</svg>
+												</button>
+											</div>
+											<div class="catalog-filtered__tag">
+												<span>Активный фильтр</span>
+												<button class="catalog-filtered__delete">
+													<svg>
+														<use xlink:href="img/sprite.svg#icon-close"></use>
+													</svg>
+												</button>
+											</div>
+											<div class="catalog-filtered__tag">
+												<span>Беларусь</span>
+												<button class="catalog-filtered__delete">
+													<svg>
+														<use xlink:href="img/sprite.svg#icon-close"></use>
+													</svg>
+												</button>
+											</div>
 										</div>
-									</li>
-								</ul>
+									</div>
+									<button class="catalog-filtered__clear">
+										<svg>
+											<use xlink:href="img/sprite.svg#icon-close"></use>
+										</svg>
+									</button>
+								</div>
 							</div>
 							<div class="catalog__wrapper">
 								<article class="catalog__item catalog-card">
