--- a/catalog.html
+++ b/catalog.html
@@ -156,7 +156,7 @@
 								<img src="img/categories-01.svg" alt="Image">
 							</picture>
 							<div class="categories__body">
-								<h3 class="categories__title">Лекарственные средства</h3>
+								<a href="#" class="categories__title">Лекарственные средства</a>
 								<ul class="categories__list">
 									<li class="categories__list-item">
 										<a href="#" class="categories__link">Аллергиям</a>
@@ -199,7 +199,7 @@
 								<img src="img/categories-02.svg" alt="Image">
 							</picture>
 							<div class="categories__body">
-								<h3 class="categories__title">Витамины и БАДы</h3>
+								<a href="#" class="categories__title">Витамины и БАДы</a>
 								<ul class="categories__list">
 									<li class="categories__list-item">
 										<a href="#" class="categories__link">Боль в горле и першение</a>
@@ -242,7 +242,7 @@
 								<img src="img/categories-03.svg" alt="Image">
 							</picture>
 							<div class="categories__body">
-								<h3 class="categories__title">Косметика и гигиена</h3>
+								<a href="#" class="categories__title">Косметика и гигиена</a>
 								<ul class="categories__list">
 									<li class="categories__list-item">
 										<a href="#" class="categories__link">Гигиена полости рта</a>
@@ -279,7 +279,7 @@
 								<img src="img/categories-04.svg" alt="Image">
 							</picture>
 							<div class="categories__body">
-								<h3 class="categories__title">Медицинская техника</h3>
+								<a href="#" class="categories__title">Медицинская техника</a>
 								<ul class="categories__list">
 									<li class="categories__list-item">
 										<a href="#" class="categories__link">Глюкометры</a>
@@ -310,7 +310,7 @@
 								<img src="img/categories-05.svg" alt="Image">
 							</picture>
 							<div class="categories__body">
-								<h3 class="categories__title">Медицинские изделия</h3>
+								<a href="#" class="categories__title">Медицинские изделия</a>
 								<ul class="categories__list">
 									<li class="categories__list-item">
 										<a href="#" class="categories__link">Аптечки, таблетницы</a>
@@ -347,7 +347,7 @@
 								<img src="img/categories-06.svg" alt="Image">
 							</picture>
 							<div class="categories__body">
-								<h3 class="categories__title">Оптика</h3>
+								<a href="#" class="categories__title">Оптика</a>
 								<ul class="categories__list">
 									<li class="categories__list-item">
 										<a href="#" class="categories__link">Аксессуары</a>
@@ -369,7 +369,7 @@
 								<img src="img/categories-07.svg" alt="Image">
 							</picture>
 							<div class="categories__body">
-								<h3 class="categories__title">Защитные средства</h3>
+								<a href="#" class="categories__title">Защитные средства</a>
 								<ul class="categories__list">
 									<li class="categories__list-item">
 										<a href="#" class="categories__link">Аллергиям</a>
@@ -412,7 +412,7 @@
 								<img src="img/categories-08.svg" alt="Image">
 							</picture>
 							<div class="categories__body">
-								<h3 class="categories__title">Аптечка</h3>
+								<a href="#" class="categories__title">Аптечка</a>
 								<ul class="categories__list">
 									<li class="categories__list-item">
 										<a href="#" class="categories__link">Боль в горле и першение</a>
@@ -455,7 +455,7 @@
 								<img src="img/categories-09.svg" alt="Image">
 							</picture>
 							<div class="categories__body">
-								<h3 class="categories__title">Здоровье и спорт</h3>
+								<a href="#" class="categories__title">Здоровье и спорт</a>
 								<ul class="categories__list">
 									<li class="categories__list-item">
 										<a href="#" class="categories__link">Гигиена полости рта</a>
@@ -492,7 +492,7 @@
 								<img src="img/categories-10.svg" alt="Image">
 							</picture>
 							<div class="categories__body">
-								<h3 class="categories__title">Корейская косметика</h3>
+								<a href="#" class="categories__title">Корейская косметика</a>
 								<ul class="categories__list">
 									<li class="categories__list-item">
 										<a href="#" class="categories__link">Аллергия</a>
@@ -535,7 +535,7 @@
 								<img src="img/categories-11.svg" alt="Image">
 							</picture>
 							<div class="categories__body">
-								<h3 class="categories__title">Мама и малыш</h3>
+								<a href="#" class="categories__title">Мама и малыш</a>
 								<ul class="categories__list">
 									<li class="categories__list-item">
 										<a href="#" class="categories__link">Боль в горле и першение</a>
@@ -578,7 +578,7 @@
 								<img src="img/categories-12.svg" alt="Image">
 							</picture>
 							<div class="categories__body">
-								<h3 class="categories__title">Сезонные товары</h3>
+								<a href="#" class="categories__title">Сезонные товары</a>
 								<ul class="categories__list">
 									<li class="categories__list-item">
 										<a href="#" class="categories__link">Гигиена полости рта</a>
@@ -615,7 +615,7 @@
 								<img src="img/categories-13.svg" alt="Image">
 							</picture>
 							<div class="categories__body">
-								<h3 class="categories__title">Уход за лежачими</h3>
+								<a href="#" class="categories__title">Уход за лежачими</a>
 								<ul class="categories__list">
 									<li class="categories__list-item">
 										<a href="#" class="categories__link">Аллергия</a>
@@ -773,7 +773,7 @@
 					</ul>
 					<ul class="footer__list">
 						<li class="footer__item">
-							<p class="footer__text">Сопровождение проекта – <a href="#" target="_blank">Silentcode</a></p>
+							<p class="footer__text"><a href="#" target="_blank">Сопровождение проекта – Silentcode</a></p>
 						</li>
 					</ul>
 				</div>
