--- a/category.html
+++ b/category.html
@@ -691,60 +691,39 @@
 							<div class="catalog-categories catalog__categories">
 								<h3 class="catalog-categories__heading">Популярные категории</h3>
 								<ul class="catalog-categories__list">
-									<li class="catalog-categories__item is--active">
+									<li class="catalog-categories__item">
 										<button class="catalog-categories__tag">
 											<span>Витамины для осени</span>
-											<svg>
-												<use xlink:href="img/sprite.svg#icon-close"></use>
-											</svg>
 										</button>
 									</li>
 									<li class="catalog-categories__item">
 										<button class="catalog-categories__tag">
 											<span>Хронические боли</span>
-											<svg>
-												<use xlink:href="img/sprite.svg#icon-close"></use>
-											</svg>
 										</button>
 									</li>
 									<li class="catalog-categories__item">
 										<button class="catalog-categories__tag">
 											<span>Для улучшения памяти</span>
-											<svg>
-												<use xlink:href="img/sprite.svg#icon-close"></use>
-											</svg>
 										</button>
 									</li>
 									<li class="catalog-categories__item">
 										<button class="catalog-categories__tag">
 											<span>Для улучшения памяти</span>
-											<svg>
-												<use xlink:href="img/sprite.svg#icon-close"></use>
-											</svg>
 										</button>
 									</li>
 									<li class="catalog-categories__item">
 										<button class="catalog-categories__tag">
 											<span>Профилактика гриппа</span>
-											<svg>
-												<use xlink:href="img/sprite.svg#icon-close"></use>
-											</svg>
 										</button>
 									</li>
 									<li class="catalog-categories__item">
 										<button class="catalog-categories__tag">
 											<span>Витамины для осени</span>
-											<svg>
-												<use xlink:href="img/sprite.svg#icon-close"></use>
-											</svg>
 										</button>
 									</li>
 									<li class="catalog-categories__item">
 										<button class="catalog-categories__tag">
 											<span>Витамины для зимы</span>
-											<svg>
-												<use xlink:href="img/sprite.svg#icon-close"></use>
-											</svg>
 										</button>
 									</li>
 									<li class="catalog-categories__item">
@@ -756,7 +735,10 @@
 					</div>
 					<div class="catalog-seo catalog__seo">
 						<div class="catalog-seo__content">
+							<h1>H1 seo-title выводим со стилями H3_375</h1>
 							<p>Антибиотики применяются для лечения инфекционных заболеваний вызванных бактериями.Такие препараты при попадании в организм уничтожают бактерии и не дают им размножаться. Для назначения нужного медикамента обязательна консультация врача, так как у всех антибиотиков есть ряд противопоказаний и показаний к применению.</p>
+							<h2>H2 seo-title выводим со стилями H4_375</h2>
+							<p>Антибиотики применяются для лечения инфекционных заболеваний вызванных бактериями.Такие препараты при попадании в организм уничтожают бактерии и не дают им размножаться.</p>
 						</div>
 					</div>
 				</div>
@@ -862,7 +844,7 @@
 					</ul>
 					<ul class="footer__list">
 						<li class="footer__item">
-							<p class="footer__text">Сопровождение проекта – <a href="#" target="_blank">Silentcode</a></p>
+							<p class="footer__text"><a href="#" target="_blank">Сопровождение проекта – Silentcode</a></p>
 						</li>
 					</ul>
 				</div>
