--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 					</ul>
 					<ul class="footer__list">
 						<li class="footer__item">
-							<p class="footer__text">Сопровождение проекта – <a href="#" target="_blank">Silentcode</a></p>
+							<p class="footer__text"><a href="#" target="_blank">Сопровождение проекта – Silentcode</a></p>
 						</li>
 					</ul>
 				</div>
