--- a/category.html
+++ b/category.html
@@ -59,7 +59,7 @@
 					<a href="#" class="header__logotype">
 						<img src="img/logotype.svg" width="255" height="27" alt="АПТЕКА ADEL">
 					</a>
-					<div class="c-catalog header__catalog is--active">
+					<div class="c-catalog header__catalog">
 						<button class="c-catalog__trigger">
 							<svg>
 								<use xlink:href="img/sprite.svg#icon-catalog"></use>
@@ -303,15 +303,6 @@
 															<a href="#" class="c-catalog__link">Венотоники</a>
 														</li>
 														<li class="c-catalog__list-item">
-															<a href="#" class="c-catalog__link">Витаминно-минеральные комплексы</a>
-														</li>
-														<li class="c-catalog__list-item">
-															<a href="#" class="c-catalog__link">Гематогены и батончики</a>
-														</li>
-														<li class="c-catalog__list-item">
-															<a href="#" class="c-catalog__link">Для беременных и кормящих мам</a>
-														</li>
-														<li class="c-catalog__list-item">
 															<a href="#" class="c-catalog__link">Для красоты</a>
 														</li>
 														<li class="c-catalog__list-item">
@@ -432,12 +423,6 @@
 													<ul class="c-catalog__list">
 														<li class="c-catalog__list-item">
 															<a href="#" class="c-catalog__link">Боль в горле и першение</a>
-														</li>
-														<li class="c-catalog__list-item">
-															<a href="#" class="c-catalog__link">Венотоники</a>
-														</li>
-														<li class="c-catalog__list-item">
-															<a href="#" class="c-catalog__link">Витаминно-минеральные комплексы</a>
 														</li>
 														<li class="c-catalog__list-item">
 															<a href="#" class="c-catalog__link">Гематогены и батончики</a>
@@ -715,21 +700,6 @@
 														</li>
 														<li class="c-catalog__list-item">
 															<a href="#" class="c-catalog__link">Для красоты</a>
-														</li>
-														<li class="c-catalog__list-item">
-															<a href="#" class="c-catalog__link">Для печени</a>
-														</li>
-														<li class="c-catalog__list-item">
-															<a href="#" class="c-catalog__link">Для регулирования веса и обмена веществ</a>
-														</li>
-														<li class="c-catalog__list-item">
-															<a href="#" class="c-catalog__link">Для суставов</a>
-														</li>
-														<li class="c-catalog__list-item">
-															<a href="#" class="c-catalog__link">Для улучшения зрения</a>
-														</li>
-														<li class="c-catalog__list-item">
-															<a href="#" class="c-catalog__link">Для улучшения памяти</a>
 														</li>
 														<li class="c-catalog__list-item">
 															<a href="#" class="c-catalog__link">Для щитовидной железы</a>
