--- a/catalog.html
+++ b/catalog.html
@@ -156,7 +156,7 @@
 													</a>
 												</li>
 											</ul>
-											<a href="#" class="c-catalog__btn btn btn--red">
+											<a href="#" class="c-catalog__btn">
 												<svg>
 													<use xlink:href="img/sprite.svg#icon-discount"></use>
 												</svg>
