--- a/category.html
+++ b/category.html
@@ -156,7 +156,7 @@
 													</a>
 												</li>
 											</ul>
-											<a href="#" class="c-catalog__btn btn btn--red">
+											<a href="#" class="c-catalog__btn">
 												<svg>
 													<use xlink:href="img/sprite.svg#icon-discount"></use>
 												</svg>
@@ -2346,7 +2346,7 @@
 												<span class="catalog-card__price catalog-card__price--red"><span>8.09</span> руб.</span>
 												<span class="catalog-card__price catalog-card__price--old"><span>11.20</span> руб.</span>
 											</div>
-											<p class="catalog-card__description">МЕГАСЕФ (пор. д/приг. р-ра д/ин. 750 мг во фл. в комп. с раствор. (вода д/инъекций в амп. 6 мл) №1) Nobelfarma Ilac Sanayii ve Ticaret A.S.-Турция</p>
+											<a href="#" class="catalog-card__description">МЕГАСЕФ (пор. д/приг. р-ра д/ин. 750 мг во фл. в комп. с раствор. (вода д/инъекций в амп. 6 мл) №1) Nobelfarma Ilac Sanayii ve Ticaret A.S.-Турция</a>
 											<span class="catalog-card__note">Продается по рецепту</span>
 										</div>
 										<div class="catalog-card__group">
@@ -2377,7 +2377,7 @@
 									<div class="catalog-card__body">
 										<div class="catalog-card__group">
 											<div class="catalog-card__prices"></div>
-											<p class="catalog-card__description">АДИЦЕФ (пор. д/приг. 60мл суспензии д/приема внутрь 250мг/мл фл. №1)</p>
+											<a href="#" class="catalog-card__description">АДИЦЕФ (пор. д/приг. 60мл суспензии д/приема внутрь 250мг/мл фл. №1)</a>
 											<span class="catalog-card__note is--active">Продается по рецепту</span>
 										</div>
 										<div class="catalog-card__group">
@@ -2398,7 +2398,7 @@
 											<div class="catalog-card__prices">
 												<span class="catalog-card__price"><span>3.66</span> руб.</span>
 											</div>
-											<p class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</p>
+											<a href="#" class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</a>
 											<span class="catalog-card__note is--active">Продается по рецепту</span>
 										</div>
 										<div class="catalog-card__group">
@@ -2419,7 +2419,7 @@
 											<div class="catalog-card__prices">
 												<span class="catalog-card__price"><span>4.02</span> руб.</span>
 											</div>
-											<p class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</p>
+											<a href="#" class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</a>
 											<span class="catalog-card__note">Продается по рецепту</span>
 										</div>
 										<div class="catalog-card__group">
@@ -2437,10 +2437,8 @@
 									</a>
 									<div class="catalog-card__body">
 										<div class="catalog-card__group">
-											<div class="catalog-card__prices">
-												<span class="catalog-card__price">от <span>19.52</span> руб.</span>
-											</div>
-											<p class="catalog-card__description">ГЕНТАМИЦИНА СУЛЬФАТ (раствор для внутривенного и внутримышечного введения 40 мг/мл амп. 2 мл №10) Белмедпрепараты РУП-Беларусь</p>
+											<div class="catalog-card__prices"></div>
+											<a href="#" class="catalog-card__description">ГЕНТАМИЦИНА СУЛЬФАТ (раствор для внутривенного и внутримышечного введения 40 мг/мл амп. 2 мл №10) Белмедпрепараты РУП-Беларусь</a>
 											<span class="catalog-card__note is--active">Продается по рецепту</span>
 										</div>
 										<div class="catalog-card__group">
@@ -2459,7 +2457,7 @@
 											<div class="catalog-card__prices">
 												<span class="catalog-card__price"><span>8.09</span> руб.</span>
 											</div>
-											<p class="catalog-card__description">МЕГАСЕФ (пор. д/приг. р-ра д/ин. 750 мг во фл. в комп. с раствор. (вода д/инъекций в амп. 6 мл) №1) Nobelfarma Ilac Sanayii ve Ticaret A.S.-Турция</p>
+											<a href="#" class="catalog-card__description">МЕГАСЕФ (пор. д/приг. р-ра д/ин. 750 мг во фл. в комп. с раствор. (вода д/инъекций в амп. 6 мл) №1) Nobelfarma Ilac Sanayii ve Ticaret A.S.-Турция</a>
 											<span class="catalog-card__note">Продается по рецепту</span>
 										</div>
 										<div class="catalog-card__group">
