--- a/search.html
+++ b/search.html
@@ -2077,7 +2077,7 @@
 										<a href="#" class="mobile-menu__link mobile-menu__link--green">Страхование</a>
 									</li>
 									<li class="mobile-menu__list-item">
-										<a href="#" class="mobile-menu__link">Парнтенрские программы</a>
+										<a href="#" class="mobile-menu__link">Партнерские программы</a>
 									</li>
 									<li class="mobile-menu__list-item">
 										<a href="#" class="mobile-menu__link">Акции и новости</a>
@@ -2494,7 +2494,7 @@
 							</svg>
 						</button>
 						<div class="mobile-menu__center">
-							<h3 class="mobile-menu__heading">Лекарственные средства</h3>
+							<h3 class="mobile-menu__heading">Косметика и гигиена</h3>
 						</div>
 					</div>
 					<div class="mobile-menu__scroll">
@@ -2686,7 +2686,7 @@
 							</svg>
 						</button>
 						<div class="mobile-menu__center">
-							<h3 class="mobile-menu__heading">Лекарственные средства</h3>
+							<h3 class="mobile-menu__heading">Медицинская техника</h3>
 						</div>
 					</div>
 					<div class="mobile-menu__scroll">
@@ -2878,7 +2878,7 @@
 							</svg>
 						</button>
 						<div class="mobile-menu__center">
-							<h3 class="mobile-menu__heading">Лекарственные средства</h3>
+							<h3 class="mobile-menu__heading">Медицинские изделия</h3>
 						</div>
 					</div>
 					<div class="mobile-menu__scroll">
@@ -3070,7 +3070,7 @@
 							</svg>
 						</button>
 						<div class="mobile-menu__center">
-							<h3 class="mobile-menu__heading">Лекарственные средства</h3>
+							<h3 class="mobile-menu__heading">Оптика</h3>
 						</div>
 					</div>
 					<div class="mobile-menu__scroll">
@@ -3262,7 +3262,7 @@
 							</svg>
 						</button>
 						<div class="mobile-menu__center">
-							<h3 class="mobile-menu__heading">Лекарственные средства</h3>
+							<h3 class="mobile-menu__heading">Защитные средства</h3>
 						</div>
 					</div>
 					<div class="mobile-menu__scroll">
@@ -3454,7 +3454,7 @@
 							</svg>
 						</button>
 						<div class="mobile-menu__center">
-							<h3 class="mobile-menu__heading">Лекарственные средства</h3>
+							<h3 class="mobile-menu__heading">Аптечка</h3>
 						</div>
 					</div>
 					<div class="mobile-menu__scroll">
@@ -3646,7 +3646,7 @@
 							</svg>
 						</button>
 						<div class="mobile-menu__center">
-							<h3 class="mobile-menu__heading">Лекарственные средства</h3>
+							<h3 class="mobile-menu__heading">Здоровье и спорт</h3>
 						</div>
 					</div>
 					<div class="mobile-menu__scroll">
@@ -3838,7 +3838,7 @@
 							</svg>
 						</button>
 						<div class="mobile-menu__center">
-							<h3 class="mobile-menu__heading">Лекарственные средства</h3>
+							<h3 class="mobile-menu__heading">Корейская косметика</h3>
 						</div>
 					</div>
 					<div class="mobile-menu__scroll">
@@ -4030,7 +4030,7 @@
 							</svg>
 						</button>
 						<div class="mobile-menu__center">
-							<h3 class="mobile-menu__heading">Лекарственные средства</h3>
+							<h3 class="mobile-menu__heading">Мама и малыш</h3>
 						</div>
 					</div>
 					<div class="mobile-menu__scroll">
@@ -4222,7 +4222,7 @@
 							</svg>
 						</button>
 						<div class="mobile-menu__center">
-							<h3 class="mobile-menu__heading">Лекарственные средства</h3>
+							<h3 class="mobile-menu__heading">Сезонные товары</h3>
 						</div>
 					</div>
 					<div class="mobile-menu__scroll">
@@ -4414,7 +4414,7 @@
 							</svg>
 						</button>
 						<div class="mobile-menu__center">
-							<h3 class="mobile-menu__heading">Лекарственные средства</h3>
+							<h3 class="mobile-menu__heading">Уход за лежачими больными</h3>
 						</div>
 					</div>
 					<div class="mobile-menu__scroll">
