--- a/search.html
+++ b/search.html
@@ -10,6 +10,13 @@
 	<meta property="og:description" content="Описание">
 	<meta property="og:url" content="/">
 	<meta property="og:site_name" content="АПТЕКА ADEL - Поиск товаров">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="img/favicon/site.webmanifest">
+	<link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#2b5797">
+	<meta name="theme-color" content="#ffffff">
 	<!-- styles -->
 	<link rel="stylesheet" href="css/vendor.min.css">
 	<link rel="stylesheet" href="css/app.min.css">
@@ -1965,7 +1972,7 @@
 									<picture class="c-user__img">
 										<img src="img/user.svg" alt="Image">
 									</picture>
-									<span class="c-user__name">Кабинет <br>покупателя</span>
+									<span class="c-user__name">Мой кабинет</span>
 								</a>
 							</div>
 						</div>
