--- a/search.html
+++ b/search.html
@@ -1985,6 +1985,9 @@
 											</a>
 										</div>
 									</div>
+									<div class="header-search__bottom">
+										<a href="#" class="header-search__more btn">Показать все результаты</a>
+									</div>
 								</div>
 							</div>
 						</div>
