--- a/index.html
+++ b/index.html
@@ -4715,6 +4715,25 @@
 			</div>
 		</div>
 		<!-- end of mobile menu -->
+		<!-- mobile city -->
+		<div class="mobile-city" id="city">
+			<div class="mobile-city__wrap">
+				<div class="mobile-city__inner">
+					<a href="#" class="c-location__trigger mobile-city__trigger">
+						<svg>
+							<use xlink:href="img/sprite.svg#icon-location"></use>
+						</svg>
+						<span>Витебск</span>
+					</a>
+					<span class="mobile-city__text">Это ваш город?</span>
+				</div>
+				<div class="mobile-city__controls">
+					<a href="#" class="mobile-city__btn btn btn--border" data-selected="true">Нет</a>
+					<a href="#" class="mobile-city__btn btn" data-selected="true">Да</a>
+				</div>
+			</div>
+		</div>
+		<!-- end of mobile city -->
 		<!-- content -->
 		<div class="wrapper__content"></div>
 		<!-- end of content -->
